--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class="overlay absolute inset-0 bg-gradient-to-b from-black via-gray-600 to-gray-600 opacity-75"></div>
 
     <nav class="relative z-10 flex justify-between items-center px-16 py-6 bg-black bg-opacity-10 backdrop-blur-md shadow-lg">
-      <div class="n-left">
-        <h1 class="text-4xl font-extrabold tracking-wide text-yellow-400">Artist Logo</h1>
+      <div class="n-left flex items-center ">
+        <img class=" h-14 fit-cover" src="pngegg (1).png" alt="">
+        <h1 class="text-3xl font-extrabold tracking-wide text-yellow-400 ">my Art...</h1>
       </div>
 
       <div class="links">
@@ -29,7 +30,7 @@
       </div>
 
       <div class="n-right">
-        <button class="px-6 py-3 bg-yellow-400 text-gray-800 text-xl rounded-full shadow-md hover:bg-yellow-500 transition duration-300 ease-in-out">
+        <button class="px-5 py-2 bg-yellow-400 text-gray-800 text-xl rounded-full shadow-md hover:bg-yellow-500 transition duration-300 ease-in-out">
           Login
         </button>
       </div>
@@ -37,11 +38,14 @@
 
     <div class="relative z-10 text-center mt-32">
       <h1 class="text-6xl font-extrabold text-yellow-400 drop-shadow-lg">Welcome to My Art World</h1>
-      <p class="mt-6 text-xl text-gray-300 max-w-3xl mx-auto">
+      <p class="mt-6 text-xl text-gray-100 max-w-3xl mx-auto">
         Discover the beauty of creativity and explore the journey of emotions through vivid colors and intricate designs.
       </p>
-      <a href="#about" class="inline-block mt-10 px-8 py-4 bg-yellow-400 text-gray-800 text-lg font-semibold rounded-full hover:bg-yellow-500 shadow-lg transition duration-300 ease-in-out">
+      <a href="#about" class="inline-block mt-10 px-4 py-3 bg-yellow-400 text-gray-800 text-lg font-semibold rounded-full hover:bg-yellow-500 shadow-lg transition duration-300 ease-in-out">
         Learn More
+      </a>
+      <a href="#about" class="inline-block mt-10 px-4 py-3 bg-yellow-400 text-gray-800 text-lg font-semibold rounded-full hover:bg-yellow-500 shadow-lg transition duration-300 ease-in-out">
+        Scroll Down
       </a>
     </div>
   </div>
